fixed alignment of screen shots. added some divs to begin alignment of other text

--- a/frontend/src/pages/Speepy.scss
+++ b/frontend/src/pages/Speepy.scss
@@ -7,14 +7,21 @@ $primary-font: 'Lora', serif;
 p {
     font-family: $primary-font;
     font-weight: 400;
+    margin-bottom: 1rem;
 }
 
 h1 {
     font-family: $primary-font;
     font-weight: 700;
+    margin-bottom: 2rem;
 }
 
 .speepy-title {
+    text-align: left;
+}
+
+.under-title {
+    display: block;
     text-align: left;
 }
 
